Fix image / title centering on mobile devices

--- a/assets/css/phantom.css
+++ b/assets/css/phantom.css
@@ -120,8 +120,10 @@ footer {
 	animation-duration:1s;
 }
 .big-logo {
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
 	opacity: 0.9;
-	position:relative;
 }
 .content, .brand {
 	display:block;
@@ -393,13 +395,13 @@ header .share a {
 }
 .blog-cover {
 	padding: 50px 8%;
-	text-align: center;
 }
 .blog-title {
 	font-size: 75px;
 	line-height: 75px;
 	font-weight: 200;
 	position: relative;
+	text-align: center;
 	margin: 0;
 }
 .blog-description {
@@ -565,12 +567,7 @@ header .share a {
 		font-size: 13px;
 		line-height: 25px;
 	}
-	.blog-cover {
-		padding: 90px 6%;
-		text-align: left;
-	}
 	.blog-title, .blog-description {
-		max-width: 270px;
 		margin: 10px 0 0 0;
 	}
 }
